<resources>
    <string name="app_name">Dating App Moderator</string>
    <string name="app_version">1.0</string>
    <string name="app_year">2021</string>
    <string name="app_copyright">datingnet.me</string>
    <string name="app_email">raccoonsquare@gmail.com</string>
    <string name="app_site">https://datingnet.me</string>
    <string name="nav_view_open">Open</string>
    <string name="nav_view_close">Close</string>
    <string name="action_login">Log in</string>
    <string name="action_signup">Sign up</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="action_continue">Continue</string>
    <string name="action_unblock">Unblock</string>
    <string name="action_block">Block</string>
    <string name="action_about">About</string>
    <string name="action_ok">OK</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_copy">Copy</string>
    <string name="action_save">Save</string>
    <string name="action_send">Send</string>
    <string name="action_open">Open</string>
    <string name="action_edit">Edit</string>
    <string name="action_reply">Reply</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_report">Report</string>
    <string name="action_remove">Delete</string>
    <string name="action_remove_chat">Delete chat</string>
    <string name="action_deactivate">Deactivate</string>
    <string name="action_create">Create</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_more">Load more</string>
    <string name="action_search">Search</string>
    <string name="action_retry">Retry</string>
    <string name="action_turn_on">Turn on</string>
    <string name="action_turn_off">Turn off</string>
    <string name="action_select_birth">Date of Birth</string>
    <string name="action_camera">Camera</string>
    <string name="action_gallery">Choose from gallery</string>
    <string name="action_copy_url">Copy link</string>
    <string name="action_open_url">Open in a browser</string>
    <string name="action_enable">Enable</string>
    <string name="action_accept">Accept</string>
    <string name="action_reject">Reject</string>
    <string name="action_pending">Pending&#8230;</string>
    <string name="action_new">New</string>
    <string name="action_profile_edit">Edit</string>
    <string name="label_profile_information">Profile Information</string>
    <string name="label_profile_activity">Profile Activity</string>
    <string name="label_profile_join">Join Date</string>
    <string name="placeholder_password">Password</string>
    <string name="placeholder_login">Username</string>
    <string name="placeholder_fullname">Fullname</string>
    <string name="placeholder_location">Location</string>
    <string name="placeholder_bio">Bio</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_subject">Subject</string>
    <string name="placeholder_support_detail">What are you contacting us about?</string>
    <string name="placeholder_current_password">Current password</string>
    <string name="placeholder_new_password">New password</string>
    <string name="placeholder_item_category">Category</string>
    <string name="placeholder_item_title">Title</string>
    <string name="placeholder_item_login">Username, email or phone</string>
    <string name="placeholder_item_passw">Password</string>
    <string name="placeholder_item_url">Web site</string>
    <string name="placeholder_item_description">Description</string>
    <string name="placeholder_search">Search</string>
    <string name="placeholder_comment">Type a comment&#8230;</string>
    <string name="placeholder_message">Type a message&#8230;</string>
    <string name="msg_loading">Please wait&#8230;</string>
    <string name="msg_loading_2">Loading. Please wait&#8230;</string>
    <string name="msg_network_error">Please check your Internet connection</string>
    <string name="msg_account_blocked">This account is blocked by a moderator.</string>
    <string name="msg_copied_to_clipboard">Copied to clipboard.</string>
    <string name="msg_enter_item">Please write something or attach photo.</string>
    <string name="msg_enter_msg">Please write something or attach photo.</string>
    <string name="msg_send_msg_error">You can not send a message to the user.</string>
    <string name="msg_gift_sent">Gift has been successfully sent.</string>
    <string name="msg_item_saved">Item has been saved successfully.</string>
    <string name="msg_item_added">Item has been added successfully.</string>
    <string name="msg_password_changed">Password successfully changed</string>
    <string name="msg_settings_saved">Settings successfully saved.</string>
    <string name="msg_ticket_send_success">Your request is accepted! You will receive a response to the email, which is indicated in the request.</string>
    <string name="msg_password_reset_link_sent">A message with link to reset your password has been sent to your email.</string>
    <string name="msg_no_such_user_in_bd">No such user in database</string>
    <string name="msg_connect_to_facebook_success">You have successfully linked application with your account on Facebook!</string>
    <string name="msg_connect_to_facebook_error">Your account on Facebook is already associated with another account.</string>
    <string name="msg_connect_to_facebook_removed">Connect with your Facebook account removed.</string>
    <string name="msg_comment_has_been_added">Comment has been added.</string>
    <string name="msg_chat_has_been_removed">Chat has been removed.</string>
    <string name="msg_profile_removed_from_blacklist">The user is removed from blocked list.</string>
    <string name="msg_profile_link_copied">Profile link copied to clipboard.</string>
    <string name="msg_item_link_copied">Item link copied to clipboard.</string>
    <string name="msg_profile_added_to_blacklist">The user is added to blocked list.</string>
    <string name="msg_success_purchase">Purchase made! Congratulations!</string>
    <string name="msg_success_ghost_mode">"Ghost Mode" has been successfully activated!</string>
    <string name="msg_success_verified_badge">"Verified Badge" successfully activated!</string>
    <string name="msg_success_disable_ads">Ads turned off!</string>
    <string name="label_ghost_mode_enabled">Ghost Mode Enabled!</string>
    <string name="label_verified_badge_enabled">Verified Badge Enabled!</string>
    <string name="label_disable_ads_enabled">Ads turned off!</string>
    <string name="error_signin">Incorrect username or password</string>
    <string name="error_internet_connection">No internet connection</string>
    <string name="error_data_loading">When loading data error has occurred. Check your network connection.</string>
    <string name="error_field_empty">Required fields are empty</string>
    <string name="error_wrong_format">Wrong format</string>
    <string name="error_small_password">Minimum 6 characters</string>
    <string name="error_small_username">Minimum 5 characters</string>
    <string name="error_small_fullname">Minimum 2 characters</string>
    <string name="error_login_taken">Username is already taken</string>
    <string name="error_email_taken">User with this email is already registered</string>
    <string name="error_password">Invalid password.</string>
    <string name="error_email">Email invalid.</string>
    <string name="error_credits">Not enough credits!</string>
    <string name="error_action">This user has forbidden you to do it!</string>
    <string name="error_no_friend">This user receives messages only from his friends!</string>
    <string name="label_gcm_like">You have new like.</string>
    <string name="label_gcm_profile_like">You have new profile like.</string>
    <string name="label_gcm_comment">You have a new comment.</string>
    <string name="label_gcm_follower">You have a new follower.</string>
    <string name="label_gcm_friend_request">You have a new friend request.</string>
    <string name="label_gcm_friend_request_accepted">Friend Request accepted.</string>
    <string name="label_gcm_friend">You have a new friend.</string>
    <string name="label_gcm_message">You have a new message.</string>
    <string name="label_gcm_gift">You have a new gift.</string>
    <string name="label_gcm_comment_reply">You have a new reply to comment.</string>
    <string name="label_authorization_via_facebook">Authorization via Facebook.</string>
    <string name="label_account_connected_to_facebook">Connected with Facebook</string>
    <string name="label_account_connect_to_facebook">Connect this account with your social network accounts</string>
    <string name="label_empty_list">List is empty.</string>
    <string name="label_nearby">Near you</string>
    <string name="label_location">Location</string>
    <string name="label_block">Block</string>
    <string name="label_block_msg">will not be able send gifts to your and send your messages, and you will not see notifications from</string>
    <string name="label_delete">Delete</string>
    <string name="label_delete_msg">Do you want to delete this Item?</string>
    <string name="label_delete_photo_msg">Do you want to delete this Photo?</string>
    <string name="label_delete_comment">Are you sure you want to delete this comment?</string>
    <string name="label_report_dialog_title">Abuse report</string>
    <string name="label_last_message_image">Image</string>
    <string name="label_profile_reported">Profile reported.</string>
    <string name="label_item_reported">Item reported.</string>
    <string name="label_photo_reported">Photo reported.</string>
    <string name="label_select_img">Select image</string>
    <string name="label_delete_img">Delete image?</string>
    <string name="label_account_disabled">Account blocked</string>
    <string name="label_search_start_screen_msg">Find People by username, name, email or location.</string>
    <string name="label_search_results">Find people:</string>
    <string name="label_search_results_error">No results found</string>
    <string name="label_likes_item">likes your item.</string>
    <string name="label_likes_profile">likes your profile.</string>
    <string name="label_comment_added">added a new comment.</string>
    <string name="label_comment_reply_added">replied to your comment.</string>
    <string name="label_follow_you">followed you.</string>
    <string name="label_friend_request_added">sent you a request to friends.</string>
    <string name="label_gift_added">made a gift.</string>
    <string name="label_share_dialog_title">Share With</string>
    <string name="label_public">Public</string>
    <string name="settings_header_general">General</string>
    <string name="settings_header_others">Others</string>
    <string name="settings_header_about">About</string>
    <string name="settings_version">Version</string>
    <string name="settings_logout">Log out</string>
    <string name="settings_copyright_info">Copyright info</string>
    <string name="settings_thanks">Acknowledgements</string>
    <string name="settings_terms">Terms of use</string>
    <string name="settings_change_password">Change password</string>
    <string name="settings_notifications">Push notifications</string>
    <string name="title_activity_settings">Settings</string>
    <string name="nav_profile">Profile</string>
    <string name="settings_notifications_new_profile_photos">New profile photos</string>
    <string name="settings_notifications_new_profile_covers">New profile covers</string>
    <string name="settings_notifications_new_media_items">New media items</string>
    <string name="page_100">Profile Photos</string>
    <string name="page_101">Profile Covers</string>
    <string name="page_102">Media Items</string>
</resources>