<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile_photos_moderation"
            android:icon="@drawable/ic_camera"
            android:title="@string/page_100"
            app:actionLayout="@layout/menu_counter_plain_" />

        <item
            android:id="@+id/nav_profile_covers_moderation"
            android:icon="@drawable/ic_image_2"
            android:title="@string/page_101"
            app:actionLayout="@layout/menu_counter_plain_" />

        <item
            android:id="@+id/nav_media_items_moderation"
            android:icon="@drawable/ic_gallery_2"
            android:title="@string/page_102"
            app:actionLayout="@layout/menu_counter_plain_" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/title_activity_settings" />

    </group>

</menu>
