<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/profileRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/nestedScrollView"
            android:background="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="315dp">

                    <ImageView
                        android:id="@+id/profileCover"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/profile_default_cover" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="@dimen/spacing_xlarge">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_large"
                            android:gravity="center"
                            android:orientation="vertical">

                            <com.mikhaellopez.circularimageview.CircularImageView
                                android:id="@+id/profilePhoto"
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:src="@drawable/profile_default_photo"
                                app:civ_border="true"
                                app:civ_border_color="@color/white"
                                app:civ_border_width="1dp"
                                app:civ_shadow="false"
                                app:civ_shadow_radius="0" />

                            <com.mikhaellopez.circularimageview.CircularImageView
                                android:id="@+id/profileProIcon"
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:layout_marginTop="-35dp"
                                android:layout_marginRight="35dp"
                                android:src="@drawable/ic_pro_mode"
                                app:civ_border="true"
                                app:civ_border_color="@color/white"
                                app:civ_border_width="1dp"
                                app:civ_shadow="false"
                                app:civ_shadow_radius="0" />

                            <com.mikhaellopez.circularimageview.CircularImageView
                                android:id="@+id/profileIcon"
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:layout_marginLeft="35dp"
                                android:layout_marginTop="-35dp"
                                android:src="@drawable/ic_verified"
                                app:civ_border="true"
                                app:civ_border_color="@color/white"
                                app:civ_border_width="1dp"
                                app:civ_shadow="false"
                                app:civ_shadow_radius="0" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_middle"
                            android:gravity="center"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                tools:ignore="UseCompoundDrawables">

                                <TextView
                                    android:id="@+id/profileFullname"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:shadowColor="@color/black"
                                    android:shadowDx="2"
                                    android:shadowDy="2"
                                    android:shadowRadius="2"
                                    android:text="Fullname"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                                    android:textColor="@color/white" />

                                <ImageView
                                    android:id="@+id/profileOnlineIcon"
                                    android:layout_width="15px"
                                    android:layout_height="15px"
                                    android:layout_marginLeft="8dp"
                                    app:srcCompat="@drawable/ic_online"
                                    android:tint="@color/green" />

                            </LinearLayout>

                            <TextView
                                android:id="@+id/profileUsername"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:shadowColor="@color/black"
                                android:shadowDx="2"
                                android:shadowDy="2"
                                android:shadowRadius="2"
                                android:text="username"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textColor="@color/white" />

                            <LinearLayout
                                android:id="@+id/profileLocationContainer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:gravity="center"
                                android:orientation="horizontal"
                                tools:ignore="UseCompoundDrawables">

                                <ImageView
                                    android:layout_width="@dimen/spacing_mlarge"
                                    android:layout_height="@dimen/spacing_mlarge"
                                    app:srcCompat="@drawable/ic_pin"
                                    android:tint="@color/white" />

                                <TextView
                                    android:id="@+id/profileLocation"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:shadowColor="@color/black"
                                    android:shadowDx="2"
                                    android:shadowDy="2"
                                    android:shadowRadius="2"
                                    android:text="San Francisco, CA"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                    android:textColor="@color/white" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>
                </RelativeLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray_bg" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="8dp">

                    <Button
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/action_block"
                        android:id="@+id/profileActionBtn"
                        android:textColor="@color/white"
                        android:background="@drawable/button_primary"
                        android:textStyle="bold"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:layout_marginLeft="1dp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray_border" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray_border" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/profileErrorScreen"
        android:longClickable="false"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_data_loading"
            android:id="@+id/profileErrorScreenMsg"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="@color/gray"
            android:textSize="18dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/profileDisabledScreen"
        android:visibility="gone" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:id="@+id/profileDisabledScreenContent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_account_disabled"
                android:id="@+id/profileDisabledScreenMsg"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/dark_blue" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/profileLoadingScreen"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profileLoadingScreenProgressBar"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</RelativeLayout>